# drop-points-crawler

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  backup.sh  bun.lockb  config.toml.sample  db_migration.sh  docker-compose.yml  drop-points-local.sh  drop-points-publish.sh  eslint.config.js  mydb.sqlite  package.json  recalculate.ts  tsconfig.json
constants/: index.ts
contracts/: Cargo.toml  README.md
contracts/contracts/token/: Cargo.toml
contracts/contracts/token/.cargo/: config
contracts/contracts/token/schema/: drop-points-token.json
contracts/contracts/token/schema/raw/: execute.json  instantiate.json
contracts/contracts/token/src/: contract.rs  error.rs
crawler/: context.ts  index.ts  random.ts
crawler/commands/: charts.ts  crawl-all.ts  crawl.ts  debug.ts  finish.ts  kyc.ts  prepare.ts  publish.ts  recalc.ts  referrals.ts  schedule.ts
db/: index.ts  load.ts  test.ts  utils.ts
doc/: index.md
lib/: asset-price.ts  concurent-promise-job.ts  execute.ts  initia-address.ts  logger.ts  neutron-address.ts  pricefeed.ts  query.ts  stargate.ts
lib/kyc/: index.ts
lib/link/: index.ts
lib/referral/: index.ts
lib/sources/: index.ts
lib/validations/: config.ts
poc/echelon/: package.json  tsconfig.json
server/: aws.ts  index.ts  prometeus.ts  serve.ts  worker.ts
server/getLeaderboardInfo/: index.ts
server/lib/: concurent-promise-job.ts  query.ts
types/: marsPositionResponse.ts  positionResponse.ts  source.ts  taskType.ts  userBalance.ts  utils.ts
types/config/: dropletRule.ts
types/graphQL/: flamePositionsResponse.ts  (+4 more)
(+467 files in other folders)
